# CheapClaw

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  README.zh-CN.md  SDK_GUIDE.md  cheapclaw_hooks.py  cheapclaw_service.py  docker-compose.yml  pyproject.toml  tool_runtime_helpers.py
assets/agent_library/CheapClawSupervisor/: general_prompts.yaml  level_0_tools.yaml  level_3_agents.yaml
assets/agent_library/CheapClawWorkerGeneral/: general_prompts.yaml  level_0_tools.yaml
assets/config/: app_config.example.json  channels.example.json  fleet.example.json  fleet.manifest.example.json
docs/: CHEAPCLAW_CLI_TUTORIAL_ZH.md
scripts/: fleet_one_click.py  fleet_web_console.py
tools_library/cheapclaw_add_task_message/: cheapclaw_add_task_message.py
tools_library/cheapclaw_get_task_status/: cheapclaw_get_task_status.py
tools_library/cheapclaw_list_agent_systems/: cheapclaw_list_agent_systems.py
tools_library/cheapclaw_list_monitor_instructions/: cheapclaw_list_monitor_instructions.py
tools_library/cheapclaw_list_peer_bots/: cheapclaw_list_peer_bots.py
tools_library/cheapclaw_reset_task/: cheapclaw_reset_task.py
tools_library/cheapclaw_resolve_monitor_instruction/: cheapclaw_resolve_monitor_instruction.py
tools_library/cheapclaw_reveal_skills/: cheapclaw_reveal_skills.py
tools_library/cheapclaw_send_peer_bot_message/: cheapclaw_send_peer_bot_message.py
tools_library/cheapclaw_start_task/: cheapclaw_start_task.py
tools_library/cheapclaw_update_panel/: cheapclaw_update_panel.py
web/: fleet_console.html
